--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,39 +1,42 @@
-<div class="app-container flex-row align-items-center">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <div class="card-group">
-          <div class="card p-4">
-            <div class="card-body">
-              <h1 class="text-capitalize default-pointer">login</h1>
-              <p class="text-muted default-pointer">Ingresa a tu cuenta</p>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
+<form #loginForm="ngForm" (ngSubmit)="loginForm.form.valid && login(loginForm)">
+  <div class="app-container flex-row align-items-center">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card-group">
+            <div class="card p-4">
+              <div class="card-body">
+                <h1 class="text-capitalize default-pointer">login</h1>
+                <p class="text-muted default-pointer">Ingresa a tu cuenta</p>
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
                     <span class="input-group-text">
                       <i class="icon-user"></i>
                     </span>
+                  </div>
+                  <input class="form-control" name="identification" type="text" placeholder="Identificacion" required>
                 </div>
-                <input class="form-control" type="text" placeholder="Identificacion">
-              </div>
-              <div class="input-group mb-4">
-                <div class="input-group-prepend">
+                <div class="input-group mb-4">
+                  <div class="input-group-prepend">
                     <span class="input-group-text">
                       <i class="icon-lock"></i>
                     </span>
+                  </div>
+                  <input class="form-control" name="password" type="password" placeholder="Contraseña" required>
                 </div>
-                <input class="form-control" type="password" placeholder="Contraseña">
-              </div>
-              <div class="row">
-                <div class="col-sm-6 col-lg-12 mx-sm-auto">
-                  <button class="btn btn-success px-4" type="button">Ingresar</button>
+                <div class="row">
+                  <div class="col-sm-6 col-lg-12 mx-sm-auto">
+                    <button class="btn btn-success px-4" type="submit">Ingresar</button>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card text-white bg-light py-5 d-none d-lg-block d-xl-block back-image" style="background-image: url('assets/images/norsup.jpg');">
-            <div class="card-body text-center">
-              <div>
-                <h1 class="font-weight-bold mx-auto mt-5 text-siv text-grow display-4">SIVOGE</h1>
+            <div class="card text-white bg-light py-5 d-none d-lg-block d-xl-block back-image"
+                 style="background-image: url('assets/images/norsup.jpg');">
+              <div class="card-body text-center">
+                <div>
+                  <h1 class="font-weight-bold mx-auto mt-5 text-siv text-grow display-4">SIVOGE</h1>
+                </div>
               </div>
             </div>
           </div>
@@ -41,4 +44,4 @@
       </div>
     </div>
   </div>
-</div>
+</form>
