sidebar, header and footer component modified, custom pipe month created, breadcrumb date-time added and admin-default component added

--- a/src/app/modules/admin/components/main/admin.component.html
+++ b/src/app/modules/admin/components/main/admin.component.html
@@ -1,1 +1,29 @@
-<p>admin works!</p>
+<div class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
+  <app-header></app-header>
+  <div class="app-body">
+    <app-sidebar></app-sidebar>
+    <main class="main">
+      <!--Breadcrumb-->
+      <app-breadcrumb></app-breadcrumb>
+      <!--Breadcrumb-->
+
+      <div class="container-fluid">
+        <div class="animated fadeIn">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="card">
+                <section>
+                  <router-outlet></router-outlet>
+                </section>
+              </div>
+            </div>
+            <!-- /.col-->
+          </div>
+          <!-- /.row-->
+        </div>
+      </div>
+    </main>
+  </div>
+</div>
+
+<app-footer></app-footer>
