--- a/src/app/modules/admin/components/sidebar/sidebar.component.html
+++ b/src/app/modules/admin/components/sidebar/sidebar.component.html
@@ -1,1 +1,115 @@
-<p>sidebar works!</p>
+<aside class="sidebar">
+  <nav class="sidebar-nav">
+    <ul class="nav">
+      <li class="nav-title">Sesión</li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="nav-icon fas fa-address-book mr-1"></i> Sesión de Votación
+          <span class="badge badge-danger"><span class="fa fa-thumbs-down"></span></span>
+          <!--Aqui puedo hacer que si no se ha creado la sesión, cambie un color u otro-->
+        </a>
+      </li>
+      <li class="nav-title">Usuarios</li>
+      <li class="nav-item">
+        <a class="nav-link" href="colors.html">
+          <i class="nav-icon fas fa-pencil-alt"></i> Estudiantes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="typography.html">
+          <i class="nav-icon fa fa-briefcase"></i> Profesores</a>
+      </li>
+      <li class="nav-title">Aspirantes y Jurado</li>
+      <li class="nav-item">
+        <a class="nav-link" href="colors.html">
+          <i class="nav-icon fas fa-pencil-alt"></i> Estudiante <!--Colors--></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="typography.html">
+          <i class="nav-icon fa fa-briefcase"></i> Profesor<!--Typography--></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="typography.html">
+          <i class="nav-icon fa fa-eye"></i> Jurado<!--Typography--></a>
+      </li>
+      <li class="nav-title">Extras</li>
+      <li class="nav-item">
+        <a href="#" class="nav-link"><i class=" nav-icon fas fa-address-card"></i> Vistazo tarjetones</a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link"><i class=" nav-icon fa fa-lock"></i> Cerrar Sesión</a>
+      </li>
+      <li class="nav-item nav-dropdown">
+        <a class="nav-link nav-dropdown-toggle" href="#">
+          <i class="nav-icon icon-puzzle"></i> Base</a>
+        <ul class="nav-dropdown-items">
+          <li class="nav-item">
+            <a class="nav-link" href="base/breadcrumb.html">
+              <i class="nav-icon icon-puzzle"></i> Breadcrumb</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/cards.html">
+              <i class="nav-icon icon-puzzle"></i> Cards</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/carousel.html">
+              <i class="nav-icon icon-puzzle"></i> Carousel</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/collapse.html">
+              <i class="nav-icon icon-puzzle"></i> Collapse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/forms.html">
+              <i class="nav-icon icon-puzzle"></i> Forms</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/jumbotron.html">
+              <i class="nav-icon icon-puzzle"></i> Jumbotron</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/list-group.html">
+              <i class="nav-icon icon-puzzle"></i> List group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/navs.html">
+              <i class="nav-icon icon-puzzle"></i> Navs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/pagination.html">
+              <i class="nav-icon icon-puzzle"></i> Pagination</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/popovers.html">
+              <i class="nav-icon icon-puzzle"></i> Popovers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/progress.html">
+              <i class="nav-icon icon-puzzle"></i> Progress</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/scrollspy.html">
+              <i class="nav-icon icon-puzzle"></i> Scrollspy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/switches.html">
+              <i class="nav-icon icon-puzzle"></i> Switches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/tables.html">
+              <i class="nav-icon icon-puzzle"></i> Tables</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/tabs.html">
+              <i class="nav-icon icon-puzzle"></i> Tabs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="base/tooltips.html">
+              <i class="nav-icon icon-puzzle"></i> Tooltips</a>
+          </li>
+        </ul>
+      </li>
+      <li class="divider"></li>
+    </ul>
+  </nav>
+  <button class="sidebar-minimizer brand-minimizer" type="button"></button>
+</aside>
