--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="app-footer">
+  <div>
+    <a href="https://coreui.io">CoreUI</a>
+    <span>&copy; 2018 creativeLabs.</span>
+  </div>
+  <div class="ml-auto">
+    <span>Powered by</span>
+    <a href="https://coreui.io">CoreUI</a>
+  </div>
+</footer>
