--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -3,8 +3,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="#">
-    <img class="navbar-brand-full mb-lg-3" src="assets/images/norsup-shield.svg" width="110" height="45" alt="CoreUI Logo">
-    <img class="navbar-brand-minimized" src="assets/images/norsup-shield.svg" width="30" height="30" alt="CoreUI Logo">
+    <img class="navbar-brand-full" src="assets/images/norsup-shield.svg" width="110" height="45" alt="Logo full">
+    <img class="navbar-brand-minimized" src="assets/images/norsup-shield.svg" width="30" height="30" alt="Logo minimized">
   </a>
   <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
     <span class="navbar-toggler-icon"></span>
@@ -13,23 +13,21 @@
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-        <img class="img-avatar" src="assets/images/admin.png" alt="admin@bootstrapmaster.com">
+        <img class="img-avatar" src="assets/images/admin.png" alt="admin image">
       </a>
       <div class="dropdown-menu dropdown-menu-right">
         <div class="dropdown-header text-center">
           <strong>Settings</strong>
         </div>
         <a class="dropdown-item" href="#">
-          <i class="fa fa-user"></i> Perfil</a>
+          <i class="fas fa-user"></i> <span class="ml-2">Perfil</span>
+        </a>
         <a class="dropdown-item" href="#">
-          <i class="fa fa-wrench"></i> Configuraciones</a>
-        <!--<a class="dropdown-item" href="#">
-          <i class="fa fa-file"></i> Projects
-          <span class="badge badge-primary">42</span>
-        </a>-->
+          <i class="fas fa-wrench"></i> <span class="ml-2">Configuraciones</span>
+        </a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">
-          <i class="fa fa-lock"></i> Cerrar Sesión
+          <i class="fas fa-lock"></i><span class=" ml-2">Cerrar Sesión</span>
         </a>
       </div>
     </li>
