--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="app-footer">
-  <div>
-    <a href="https://coreui.io">CoreUI</a>
-    <span>&copy; 2018 creativeLabs.</span>
+  <div class="mx-auto">
+    <span class="mr-1">Made with <i class="fas fa-hourglass-half"></i> and <i class="far fa-heart mr-2"></i>
+    </span> Special thanks to
+    <a href="https://coreui.io" class="ml-1" >&copy; CoreUI</a>
   </div>
-  <div class="ml-auto">
-    <span>Powered by</span>
-    <a href="https://coreui.io">CoreUI</a>
+  <div class="mx-auto mr-2">
+    <span>versión {{ appVersion }}</span>
   </div>
 </footer>
