--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -1,12 +1,12 @@
 <header class="app-header navbar">
-  <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
+  <button class="d-lg-none navbar-toggler sidebar-toggler mr-auto" type="button" data-toggle="sidebar-show">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" [routerLink]="['/admin']">
     <img class="navbar-brand-full" src="assets/images/norsup-shield.svg" width="110" height="45" alt="Logo full">
     <img class="navbar-brand-minimized" src="assets/images/norsup-shield.svg" width="30" height="30" alt="Logo minimized">
   </a>
-  <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
+  <button class="d-md-none navbar-toggler sidebar-toggler" type="button" data-toggle="sidebar-lg-show">
     <span class="navbar-toggler-icon"></span>
   </button>
 
