--- a/src/app/modules/admin/components/main/modals/modal-create-teacher/modal-create-teacher.component.html
+++ b/src/app/modules/admin/components/main/modals/modal-create-teacher/modal-create-teacher.component.html
@@ -12,7 +12,8 @@
         <select class="custom-select" name="doc-type" id="doc-type">
           <option value="nn" [disabled]="true" selected>Selecciona</option>
           <option value="cc">Cedula de Ciudadania</option>
-          <option value="ps">Pasaporte</option>
+          <option value="ce">Cedula de Extranjería</option>
+          <option value="tp">Pasaporte</option>
         </select>
       </div>
       <div class="form-group col-6">
