aspirant-jury admin-student component ready

--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -2,7 +2,7 @@
   <button class="d-lg-none navbar-toggler sidebar-toggler mr-auto" type="button" data-toggle="sidebar-show">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" [routerLink]="['/admin']">
+  <a class="navbar-brand" [routerLink]="['/admin']" routerLinkActive="">
     <img class="navbar-brand-full" src="assets/images/norsup-shield.svg" width="110" height="45" alt="Logo full">
     <img class="navbar-brand-minimized" src="assets/images/norsup-shield.svg" width="30" height="30" alt="Logo minimized">
   </a>
