--- a/src/app/modules/admin/components/main/sections/admin-default/admin-default.component.html
+++ b/src/app/modules/admin/components/main/sections/admin-default/admin-default.component.html
@@ -1,4 +1,4 @@
-<div class="card-header">Analytics</div>
+<div class="card-header text-capitalize"> {{ title }} </div>
 <div class="card-body">
   <div class="row">
     <div class="col-sm-6">
