--- a/src/app/modules/admin/components/sidebar/sidebar.component.html
+++ b/src/app/modules/admin/components/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
         </a>
         <ul class="nav-dropdown-items">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" [routerLink]="['/admin/students']" routerLinkActive="active-link">
               <i class="nav-icon fas fa-pencil-alt"></i> Estudiante</a>
           </li>
           <li class="nav-item">
