--- a/src/app/modules/admin/components/main/sections/admin-student/admin-student.component.css
+++ b/src/app/modules/admin/components/main/sections/admin-student/admin-student.component.css
@@ -104,3 +104,10 @@ body {
   -webkit-box-shadow: 0 0 20px #0072b1;
   box-shadow: 0 0 20px #0072b1;
 }
+
+.close-btn {
+  margin-right: 10px !important;
+}
+.close-btn:hover {
+  color: red !important;
+}
