--- a/src/app/modules/admin/components/main/sections/admin-student/admin-student.component.html
+++ b/src/app/modules/admin/components/main/sections/admin-student/admin-student.component.html
@@ -22,15 +22,19 @@
           <h4>+</h4>
         </div>
       </div>
-      <div *ngFor="let user of students | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize">
-        <div class="box no-select" [ngStyle]="{'background': 'url(assets/images/' + user.imageName + ') no-repeat',
+      <div *ngFor="let student of students | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize">
+        <div class="box no-select" [ngStyle]="{'background': 'url(assets/images/' + student.avatar + ') no-repeat',
                                     'background-size': 'cover', 'background-position': 'center'}">
+          <button type="button" class="close close-btn" aria-label="Close" [ngbTooltip]="deleteBtn">
+            <span aria-hidden="true">&times;</span>
+          </button>
           <div class="grade">
-            <h4> Grado: {{ user.gradeCourse }} </h4>
+            <h4> Grado: {{ student.grade + student.group }} </h4>
+            <!--<h4 class="text-capitalize"> {{ student.aspirant_type }} </h4>-->
           </div>
-          <h1> {{ user.name }} </h1>
+          <h1> {{ student.name }} </h1>
           <div class="poster p2" (click)="onShowAspirantClick()" [ngbTooltip]="showBtn">
-            <h4> {{ user.initialLastName }} </h4>
+            <h4> {{ student.initialLastName }} </h4>
           </div>
       </div>
       </div>
@@ -41,3 +45,4 @@
 
 <ng-template #addBtn>Agregar</ng-template>
 <ng-template #showBtn>Mostrar</ng-template>
+<ng-template #deleteBtn>Eliminar</ng-template>
