aspirant routes modified and new routes added. Footer modified

--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="mx-auto">
     <span class="mr-1">Made with <i class="fas fa-hourglass-half"></i> and <i class="far fa-heart mr-2"></i>
     </span> Special thanks to
-    <a href="https://coreui.io" class="ml-1" >&copy; CoreUI</a>
+    <a href="https://coreui.io" class="ml-1" target="_blank">&copy; CoreUI</a>
   </div>
   <div class="mx-auto mr-2">
     <span>versión {{ appVersion }}</span>
