--- a/src/app/modules/admin/components/main/sections/admin-student-update/admin-student-update.component.html
+++ b/src/app/modules/admin/components/main/sections/admin-student-update/admin-student-update.component.html
@@ -19,10 +19,10 @@
         {{ student.grade + " " + student.group }}
       </p>
       <div class="buttons">
-        <a class="btn btn-outline-light" [routerLink]="['/admin/students']">
+        <a class="btn btn-outline-light" [routerLink]="['/admin/aspirant/students']">
           Volver
         </a>
-        <a class="btn btn-outline-success ml-2" [routerLink]="['/admin/students']">
+        <a class="btn btn-outline-success ml-2" [routerLink]="['/admin/aspirant/students']">
           Modificar
         </a>
       </div>
