Admin components restructured, new components added and admin routes updated

--- a/src/app/modules/admin/components/sidebar/sidebar.component.html
+++ b/src/app/modules/admin/components/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
               <i class="nav-icon fas fa-pencil-alt"></i> Estudiante</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" [routerLink]="['/admin/aspirant/teachers']" routerLinkActive="active-link">
               <i class="nav-icon fas fa-briefcase"></i> Profesor</a>
           </li>
       </ul>
