--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -19,10 +19,10 @@
         <div class="dropdown-header text-center">
           <strong>Settings</strong>
         </div>
-        <a class="dropdown-item" [routerLink]="['/admin']">
+        <a class="dropdown-item" [routerLink]="['/admin/profile']">
           <i class="fas fa-user"></i> <span class="ml-2">Perfil</span>
         </a>
-        <a class="dropdown-item" [routerLink]="['/admin']">
+        <a class="dropdown-item" [routerLink]="['/admin/profile', user]">
           <i class="fas fa-wrench"></i> <span class="ml-2">Configuraciones</span>
         </a>
         <div class="dropdown-divider"></div>
