Voting session showing past sessions and the currend session or, alternatively, shows card and form to create a new session

--- a/src/app/modules/admin/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/modules/admin/components/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<ol class="breadcrumb row">
+<ol class="breadcrumb row no-select">
   <li class="breadcrumb-item h3 mx-auto">
     <span class="badge badge-pill badge-success"><i class="fas fa-clock"></i>
       {{ dateTime | date: 'h:mm:ss a d' | month: monthYear.month: monthYear.year }}
