--- a/src/app/modules/admin/components/session/update/update.component.html
+++ b/src/app/modules/admin/components/session/update/update.component.html
@@ -1,1 +1,54 @@
-<p>update works!</p>
+<div class="card-header"> {{ title }} </div>
+<div class="card-body">
+    <div class="container">
+      <div class="card-container mx-auto no-select">
+        <span class="pro text-uppercase">ses</span>
+        <img class="round"
+             src="{{'assets/images/norsup.jpg'}}" height="160" width="160"
+             alt="user"/>
+        <div class="container">
+          <form>
+            <div class="row mt-4">
+              <div class="col-10 mx-auto">
+                <div class="form-group">
+                  <label for="session-name" class="text-dark">Nombre de sesión</label>
+                  <input type="text" class="form-control" name="session-name" id="session-name" aria-describedby="session-name" (change)="onChange()"
+                         [placeholder]="'Votaciones 2019'" [(ngModel)]="sessionName">
+                </div>
+              </div>
+              <div class="col-10 mx-auto">
+                <div class="form-group">
+                  <label for="session-date" class="text-dark">Fecha de votaciones</label>
+                  <input class="form-control" placeholder="año-mes-dia" id="session-date"
+                         name="session-date" ngbDatepicker #d="ngbDatepicker" [(ngModel)]="sessionDate" (change)="onChange()"
+                         (focus)="d.toggle()" [readOnly]="true" [minDate]="{year: date.year, month: date.month, day: date.day}">
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="start-time" class="text-dark">Hora de inicio</label>
+                  <ngb-timepicker id="start-time" name="start-time" [meridian]="true" [(ngModel)]="startTime"
+                                  (change)="onChange()"></ngb-timepicker>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="form-group">
+                  <label for="end-time" class="text-dark">Hora de finalización</label>
+                  <ngb-timepicker id="end-time" name="end-time" [meridian]="true" [(ngModel)]="endTime"
+                                  (change)="onChange()" (click)="onChange()"></ngb-timepicker>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="buttons">
+          <a class="btn btn-warning" [routerLink]="['/admin/sessions']">
+            Volver
+          </a>
+          <button class="btn btn-primary ml-2" [routerLink]="['/admin/sessions']" [disabled]="modifyButton">
+            Modificar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
